--- a/example/example.html
+++ b/example/example.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Orange Notification - Notifcation Service for AngularJS Apps</title>
-  <style rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css"></style>
-  <style rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css"></style>
-  <style rel="stylesheet" type="text/css" href="example.css"></style>
+  <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css"></link>
+  <link rel="stylesheet" type="text/css" href="/bower_components/font-awesome/css/font-awesome.css"></link>
+  <link rel="stylesheet" type="text/css" href="example.css"></link>
 </head>
 <body ng-app="exampleOrange">
   <div class="container-fluid" ng-controller="ExampleCtrl">
     <div class="row">
       <div class="col-xs-12">
         <div class="jumbotron">
-          <h1>Hello World!</h1>
+          <h1>Hello, Orange Notification!</h1>
         </div>
       </div>
     </div>
@@ -22,8 +22,8 @@
       <!-- ... And ends here -->
     </div>
   </div>
-  <script src="bower_components/angularjs/angular.js" type="text/javascript"></script>
-  <script src="orange-notification.js" type="text/javascript"></script>
+  <script src="/bower_components/angularjs/angular.js" type="text/javascript"></script>
+  <script src="/dist/orange-notification.js" type="text/javascript"></script>
   <script src="example.js" type="text/javascript"></script>
 </body>
 </html>
